--- a/web/2.html
+++ b/web/2.html
@@ -4,6 +4,9 @@
   <title>WEB1 - CSS</title>
   <meta charset="utf-8">
   <style>
+   body {
+     margin:8px;
+   }
    a {
      color:black;
      text-decoration: none;
@@ -11,6 +14,21 @@
    h1 {
      font-size:45px;
      text-align:center;
+     border-bottom: 1px solid gray;
+     margin:0;
+     padding: 20px;
+   }
+   ol {
+     border-right: 1px solid gray;
+     width:100px;
+     margin:0;
+     padding:20px;
+   }
+   .saw {
+     color:gray;
+   }
+   #active {
+     color:red;
    }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -27,8 +45,8 @@
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html" style="color:red;text-decoration:underline;">CSS</a></li>
+    <li><a href="1.html" class="saw">HTML</a></li>
+    <li><a href="2.html" class="saw" id="active">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
 <!--
