--- a/생활코딩/web2 - JavaScript/3.html
+++ b/생활코딩/web2 - JavaScript/3.html
@@ -4,28 +4,39 @@
   <title>WEB1 - JavaScript</title>
   <meta charset="utf-8">
   <script>
-  function setColor(color){
-    var alist = document.querySelectorAll('a');
-    var i = 0;
-    while(i < alist.length){
-      alist[i].style.color = color;
-      i = i + 1;
+  var Links = {
+    setColor:function(color){
+      var alist = document.querySelectorAll('a');
+      var i = 0;
+      while(i < alist.length){
+        alist[i].style.color = color;
+        i = i + 1;
+      }
+    }
+  }
+
+  var Body = {
+    setColor:function(color){
+      document.querySelector('body').style.color = color;
+    },
+    setBackgroundColor:function(color){
+      document.querySelector('body').style.backgroundColor = color;
     }
   }
   function nightDayHandler(self){
     var target = document.querySelector('body');
     if(self.value === 'night') {
-      target.style.backgroundColor = 'black';
-      target.style.color = 'white';
+      Body.setBackgroundColor('black');
+      Body.setColor('white');
       self.value = 'day';
 
-      setColor('powderblue');
+      Links.setColor('powderblue');
     } else {
-      target.style.backgroundColor = 'white';
-      target.style.color = 'black';
+      Body.setBackgroundColor('white');
+      Body.setColor('black');
       self.value = 'night';
 
-      setColor(blue);
+      Links.setColor('blue');
     }
   }
   </script>
