--- a/생활코딩/web3 - ajax/index.html
+++ b/생활코딩/web3 - ajax/index.html
@@ -4,13 +4,17 @@
   <title>WEB1 - Welcome</title>
   <meta charset="utf-8">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="colors.js"></script>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
+  <input type="button" value="night" onclick="
+    nightDayHandler(this);
+  ">
   <ol>
-    <li><a onclick="fetchPage('html')">HTML</a></li>
-    <li><a onclick="fetchPage('css')">CSS</a></li>
-    <li><a onclick="fetchPage('javascript')">JavaScript</a></li>
+    <li><a href="#!html" onclick="fetchPage('html')">HTML</a></li>
+    <li><a href="#!css" onclick="fetchPage('css')">CSS</a></li>
+    <li><a href="#!javascript" onclick="fetchPage('javascript')">JavaScript</a></li>
   </ol>
   <article>
 
@@ -22,6 +26,11 @@
         document.querySelector('article').innerHTML = text;
       })
     });
+  }
+  if(location.hash) {
+    fetchPage(location.hash.substr(2));
+  } else {
+    fetchPage('welcome');
   }
   </script>
 </body>
