--- a/생활코딩/web3 - ajax/index.html
+++ b/생활코딩/web3 - ajax/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="colors.js"></script>
+  <script src="fetch-master/fetch.js"></script>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
@@ -32,7 +33,17 @@
   }
   fetch('list').then(function(response){
     response.text().then(function(text){
-      document.querySelector('#nav').innerHTML = text;
+      var items = text.split(',');
+      var i = 0;
+      var tags = '';
+      while(i<items.length){
+        var item = items[i];
+        item = item.trim();
+        var tag = '<li><a href="#!'+item+'" onclick="fetchPage(\''+item+'\')">'+item+'</a></li>';
+        tags = tags + tag;
+        i = i + 1;
+      }
+      document.querySelector('#nav').innerHTML = tags;
     })
   });
   </script>
