인스턴스 옵션 속성

--- a/inflearn/Vue.js Beginner/playground/instance.html
+++ b/inflearn/Vue.js Beginner/playground/instance.html
@@ -15,7 +15,9 @@
         el: "#app",
         data: {
           message: "hi"
-        }
+        },
+        methods: {},
+        created: function() {}
       });
     </script>
   </body>
