--- a/inflearn/Vue.js Beginner/playground/component.html
+++ b/inflearn/Vue.js Beginner/playground/component.html
@@ -13,6 +13,8 @@
       <app-footer></app-footer>
     </div>
 
+    <div id="app2"></div>
+
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
       Vue.component("app-header", {
@@ -23,6 +25,15 @@
       });
       new Vue({
         el: "#app",
+        components: {
+          "app-footer": {
+            template: "<footer>footer</footer>"
+          }
+        }
+      });
+
+      new Vue({
+        el: "#app2",
         components: {
           "app-footer": {
             template: "<footer>footer</footer>"
