컴포넌트와 인스턴스의 관계

--- a/inflearn/Vue.js Beginner/playground/component.html
+++ b/inflearn/Vue.js Beginner/playground/component.html
@@ -9,11 +9,14 @@
   <body>
     <div id="app">
       <app-header></app-header>
-      <app-contest></app-contest>
+      <app-content></app-content>
       <app-footer></app-footer>
     </div>
 
-    <div id="app2"></div>
+    <div id="app2">
+      <app-content></app-content>
+      <app-footer></app-footer>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
